--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <div class="navbar-container">
+                <a href="#" class="navbar-brand primary-color">
+                    Jade<span class="light-color">Makeup<span>
+                </a>           
+                <button onclick="NavbarToggle()" type="button" class="navbar-button light-color">
+                    <i class="bi bi-list"></i>
+                </button> 
+                <div class="navbar-menu">
+                    <ul class="navbar-items">
+                        <li class="navbar-item"><a href="#" class="navbar-link">Makeup</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Skincare</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Contact</a></li>
+                    </ul>
+                </div>               
+            </div>
+            <div class="navbar-toggle">
+                <ul class="navbar-items">
+                    <li class="navbar-item"><a href="#" class="navbar-link">Makeup</a></li>
+                    <li class="navbar-item"><a href="#" class="navbar-link">Skincare</a></li>
+                    <li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
+                    <li class="navbar-item"><a href="#" class="navbar-link">Contact</a></li>
+                </ul>
+            </div>
+        </nav> 
+    </header>   
 </body>
 </html>
