--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
                 </ul>
             </div>
         </nav> 
-    </header>   
+    </header>
+    <!-- Footer -->
+    <footer class="footer secondary-color">       
+        <h4>Follow us on social media</h4>
+        <div class="footer-links">
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-tiktok"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>       
+        </div>
+        <p>
+            &copy; Copyright <span class="year"></span> - Jade Makeup
+        </p>
+    </footer>    
 </body>
 </html>
