--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/app.css">
     <!-- Javascript -->
     <script src="js/script.js" defer></script>
 </head>
@@ -50,6 +50,33 @@
             </div>
         </nav> 
     </header>
+    <!-- Gallery Section -->
+    <section class="gallery">
+        <div class="gallery-card" id="card-1">
+            <h3 class="gallery-card-title">Megan Wolf</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+        <div class="gallery-card" id="card-2">
+            <h3 class="gallery-card-title">Camila Ortiz</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+        <div class="gallery-card" id="card-3">
+            <h3 class="gallery-card-title">Kelly Fox</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+        <div class="gallery-card" id="card-4">
+            <h3 class="gallery-card-title">Brenda Kyle</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+        <div class="gallery-card" id="card-5">
+            <h3 class="gallery-card-title">Samara Port</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+        <div class="gallery-card" id="card-6">
+            <h3 class="gallery-card-title">Kim Kazuya</h3>
+            <a href="#" class="gallery-card-btn">Learn More</a>
+        </div>
+    </section>
     <!-- Footer -->
     <footer class="footer secondary-color">       
         <h4>Follow us on social media</h4>
